Added optional parallelisation of file trimming, for better performance